--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,16 +1,5 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
 
-// @font-face {
-//   font-family: 'NotoSansTC-Regular';
-//      src: url('Ubuntu-RI-webfont.eot');
-//      src: url('Ubuntu-RI-webfont.eot?#iefix') format('embedded-opentype'),
-//           url('Ubuntu-RI-webfont.woff') format('woff'),
-//           url('Ubuntu-RI-webfont.ttf') format('truetype'),
-//           url('Ubuntu-RI-webfont.svg#UbuntuItalic') format('svg');
-//   font-weight: normal;
-//   font-style: normal;
-// }
-
 html,
 body {
   height: 100%;
@@ -18,63 +7,104 @@ body {
 }
 
 body {
-  font-family: NotoSansTC-Regular, sans-serif;
+  font-family: "Noto Sans TC", sans-serif;
 }
 
 .footer-background {
-  background: #0093be; // 要成漸層色
+  // background: #0093be; // 要成漸層色
+
+  background: url("../../image/footer-bg02.jpg"), #0094bd;
+  background-position: center top;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
 }
 
 .browser-Suggestions-background {
-  background: #196082;
+  background: url("../../image/footer-brower-bg.png");
+  background-position: center top;
+  background-size: 100% auto;
+  background-repeat: repeat-y;
 }
 
 .fund-warning-background {
-  background-image: url("../../image/section-10-bg.png");
+  background: url("../../image/section-10-bg.png"),#f0f2f5;
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
 }
 
 .video-tab-background {
-  background-image: url("../../image/section-2-bg.png");
+  background: url("../../image/section-2-2@2x.png"),url("../../image/section-2-1@2x.png"),#ffffff;
+  background-size: 100%,100%;
+  background-position: bottom,top;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+// .video-tab-background:before{
+//   content: "";
+//   position:absolute;
+//   top: 0;
+//   left:0;
+//   width: 100%;
+//   height: 100%;
+//   display: block;
+//   background-image: url("../../image/section-2-2@2x.png");
+//   background-size: 100%;
+//   background-position: bottom;
+//   background-repeat: no-repeat;
+// }
+
+// .video-tab-background {
+//   background: url("../../image/section-2-1@2x.png"),url("../../image/section-2-2@2x.png"),#ffffff;
+//   // background-size: cover, cover;
+//   background-size: auto;
+//   background-position: top center,bottom center;
+//   background-repeat: no-repeat;
+//   padding-bottom: 100px;
+// }
+
+.banner {
+  background-image: url("../../image/section-1-1@2x.png");
+  background-size: 100%;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+
+.reason-background {
+  background: url("../../image/section-4-1@2x.png"),url("../../image/section-3-1@2x.png"),#b2e4fe;
+  background-size: 100%, 100%;
+  background-position: bottom center, top center;
+  background-repeat: no-repeat;
+}
+
+// .reason-background {
+//   background-image: url("../../image/section-3-bg.png");
+//   background-size: 100%;
+//   background-position: bottom;
+//   background-repeat: no-repeat;
+// }
+
+.global-area-background {
+  background: url("../../image/section-4-bg.png"),#105894;
   background-size: 100%;
   background-position: top;
   background-repeat: no-repeat;
+  margin-top: -2px;
 }
 
-.banner {
-  background-image: url("../../image/section-1-bg.png");
-  background-size: 100%;
-  background-position: bottom;
+.download-area-background {
+  background: url("../../image/section-8-2@2x.png"),url("../../image/section-8-1@2x.png"), #e6eaef;
+  background-size: 100%,100%;
+  background-position: bottom,top;
   background-repeat: no-repeat;
 }
 
-.reason-background{
-  background-image: url("../../image/section-3-bg.png");
+.howto-background {
+  background: url("../../image/section-9-bg.png"), #f0f2f5;
   background-size: 100%;
-  background-position: bottom;
-  background-repeat: no-repeat;
-}
-
-.global-area-background{
-  background-image: url("../../image/section-4-bg.png");
-  background-size: 100%;
-  background-position: bottom;
-  background-repeat: no-repeat;
-}
-
-.download-area-background{
-  background-image: url("../../image/section-8-bg.png");
-  background-size: 100%;
-  background-position: bottom;
-  background-repeat: no-repeat;
-}
-
-.howto-background{
-  background-image: url("../../image/section-9-bg.png");
-  background-size: 100%;
-  background-position: bottom;
+  background-position: top;
   background-repeat: no-repeat;
 }
 
@@ -111,3 +141,102 @@ body {
   background: transparent linear-gradient(0deg, #ea6d2f 0%, #df943b 100%) 0% 0%
     no-repeat padding-box;
 }
+
+.go-to-play-btn-background {
+  background: transparent linear-gradient(180deg, #68d9f9 0%, #0f55af 100%) 0%
+    0% no-repeat padding-box;
+}
+.hashtab-btn-wrap-background {
+  position: relative;
+  background: transparent linear-gradient(0deg, #1b1464 0%, #00b7fb66 100%) 0%
+    0% no-repeat padding-box;
+}
+
+.hashtab-btn-background {
+  background: transparent linear-gradient(180deg, #0045b4 0%, #001237 100%) 0%
+    0% no-repeat padding-box;
+}
+
+.global-card-background {
+  background: transparent
+    linear-gradient(
+      180deg,
+      rgba(44, 46, 129, 0.8) 0%,
+      rgba(27, 121, 138, 0.8) 100%
+    )
+    0% 0% no-repeat padding-box;
+}
+
+.hashtab-btn-wrap-background:before {
+  content: "";
+  position: absolute;
+  background-image: url("../../image/section-2-nav-left-img.svg");
+  background-size: 100%;
+  width: 10rem;
+  height: 10rem;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  left: 1%;
+  bottom: 10%;
+  pointer-events: none;
+}
+
+.hashtab-btn-wrap-background:after {
+  content: "";
+  position: absolute;
+  background-image: url("../../image/section-2-nav-right-img.svg");
+  background-size: 100%;
+  width: 6rem;
+  height: 6rem;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  right: 3.5%;
+  bottom: 10%;
+  pointer-events: none;
+}
+
+.sub-title-background {
+  background-image: url("../../image/section-3-sub-title-bg.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.how-to-text-shadow {
+  text-shadow: 0px 7px 0px #0000001a;
+}
+
+.video-btn-active {
+  background: transparent
+    linear-gradient(180deg, #612d7f 0%, #252d6c 50%, #052d62 100%) 0% 0%
+    no-repeat padding-box;
+}
+
+// .house1-background{
+//   background-image: url("../../image/section-3-sub-title-bg.svg");
+//   background-size: cover;
+//   background-repeat: no-repeat;
+// }
+
+.videobox {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+
+.videobox iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.relfect {
+  -webkit-box-reflect: below 5px -webkit-linear-gradient(transparent, transparent
+        87%, rgba(255, 255, 255, 0.45));
+  display: block;
+}
+
+@import "erica";
+@import "leon";
