--- a/scss/app.scss
+++ b/scss/app.scss
@@ -40,6 +40,7 @@ body {
   background-position: bottom, top;
   background-repeat: no-repeat;
   position: relative;
+  margin-top: -1px;
 }
 
 // .video-tab-background:before{
@@ -75,10 +76,33 @@ body {
 
 .reason-background {
   background: url("../../image/section-4-1@2x.png"),
-    url("../../image/section-3-1@2x.png"), #b2e4fe;
+    url("../../image/section-3-1@2x.png"),
+    linear-gradient(180deg, transparent 0%, #b2e4fe 100%);
   background-size: 100%, 100%;
-  background-position: bottom center, top center;
+  background-position: bottom -1px left 0, top center;
   background-repeat: no-repeat;
+
+  // background: url("../../image/new-big-bg-3.png");
+  // background-size: auto;
+  // background-position: bottom center;
+  // background-repeat: no-repeat;
+
+
+  position: relative;
+
+  &::after{
+    content:"";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left: 0;
+    background: url("../../image/hexagon.svg");
+    background-size: 80%;
+    background-position: top center;
+    background-repeat: no-repeat;
+  }
 }
 
 // .reason-background {
@@ -91,24 +115,39 @@ body {
 .global-area-background {
   background: url("../../image/section-4-bg.png"), #105894;
   background-size: 100%;
-  background-position: top;
+  background-position: top 1px left 0;
   background-repeat: no-repeat;
   margin-top: -2px;
+
+  // background: url("../../image/new-big-bg-4.png");
+  // background-size: auto;
+  // background-position: top center;
+  // background-repeat: no-repeat;
+  // margin-top: -2px;
 }
 
 .download-area-background {
-  background: url("../../image/section-8-2@2x.png"),
-    url("../../image/section-8-1@2x.png"), #e6eaef;
-  background-size: 100%, 100%;
-  background-position: bottom, top;
+  // background: url("../../image/section-8-2@2x.png"),
+  //   url("../../image/section-8-1@2x.png"), #e6eaef;
+  // background-size: 100%, 100%;
+  // background-position: bottom, top;
+  // background-repeat: no-repeat;
+  background: url("../../image/new-big-bg.png");
+  background-size: auto;
+  background-position: bottom center;
   background-repeat: no-repeat;
 }
 
 .howto-background {
-  background: url("../../image/section-9-bg.png"), #f0f2f5;
-  background-size: 100%;
-  background-position: top;
+  // background: url("../../image/section-9-bg.png"), #f0f2f5;
+  // background-size: 100%;
+  // background-position: top;
+  // background-repeat: no-repeat;
+  background: url("../../image/new-big-bg2.png");
+  background-size: auto;
+  background-position: top center;
   background-repeat: no-repeat;
+  margin-top: -1px;
 }
 
 .describe-info-background {
@@ -148,19 +187,19 @@ body {
 .go-to-play-btn-background {
   background: transparent linear-gradient(180deg, #68d9f9 0%, #0f55af 100%) 0%
     0% no-repeat padding-box;
-    position: relative;
-    &::after{
-      content:"";
-      position: absolute;
-      width: 80%;
-      height: 100%;
-      left: 50%;
-      top:0;
-      transform: translate(-50%,0%);
-      display: block;
-      box-shadow: 0px 3px 8px 0px #0ca7c4;
-      z-index: -1;
-    }
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    width: 80%;
+    height: 100%;
+    left: 50%;
+    top: 0;
+    transform: translate(-50%, 0%);
+    display: block;
+    box-shadow: 0px 3px 8px 0px #0ca7c4;
+    z-index: -1;
+  }
 }
 .hashtab-btn-wrap-background {
   position: relative;
@@ -263,6 +302,10 @@ body {
     background: #0064c3;
     color: #ffffff;
   }
+  .swiper-button-prev:after,
+  .swiper-rtl .swiper-button-next:after {
+    display: none;
+  }
 }
 
 .global-area-background {
@@ -272,6 +315,10 @@ body {
   .swiper-pagination-bullet-active {
     background: #ffffff;
     color: #0f477c;
+  }
+  .swiper-button-prev:after,
+  .swiper-rtl .swiper-button-next:after {
+    display: none;
   }
 }
 
