--- a/scss/app.scss
+++ b/scss/app.scss
@@ -87,16 +87,15 @@ body {
   // background-position: bottom center;
   // background-repeat: no-repeat;
 
-
   position: relative;
 
-  &::after{
-    content:"";
+  &::before {
+    content: "";
     display: block;
     width: 100%;
     height: 100%;
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
     background: url("../../image/hexagon.svg");
     background-size: 80%;
@@ -306,6 +305,10 @@ body {
   .swiper-rtl .swiper-button-next:after {
     display: none;
   }
+  .swiper-button-next:after,
+  .swiper-rtl .swiper-button-prev:after {
+    display: none;
+  }
 }
 
 .global-area-background {
@@ -318,6 +321,11 @@ body {
   }
   .swiper-button-prev:after,
   .swiper-rtl .swiper-button-next:after {
+    display: none;
+  }
+
+  .swiper-button-next:after,
+  .swiper-rtl .swiper-button-prev:after {
     display: none;
   }
 }
@@ -359,6 +367,10 @@ body {
 .hover-btn-text-bright:hover {
   text-shadow: #0ca7c4 3px 1px 24px, #0ca7c4 -1px -1px 24px;
   box-shadow: 0px 0px 8px 3px #0ca7c4;
+}
+
+body.modal-open {
+  overflow: hidden;
 }
 
 @import "erica";
